--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,18 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
-    "framer-motion": "^10.9.2",
+    "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
