--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 MONGO_URL=mongodb+srv://faisalinfinity:faisal@cluster0.kdxfvnp.mongodb.net/healthistic?retryWrites=true&w=majority
 PORT=8080
+pubilshableKey=
+secretKey=
