--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.8.2",
