--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "emailjs": "^4.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
