--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "firebase": "^9.18.0",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
