--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 MONGO_URL=mongodb+srv://faisalinfinity:faisal@cluster0.kdxfvnp.mongodb.net/healthistic?retryWrites=true&w=majority
 PORT=8080
-pubilshableKey=
-secretKey=
+REACT_APP_KEYID=rzp_test_V19r9TsAQAF3J6
+keysecret=V5Zg2GDOaDLRDdov4T7ngpEa
